2009-01-21  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* example/port_power/ex0402_port_callback_reply.cpp: add return
	value to read method (thanks Arnaud Degroote!)
	
2009-01-20  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/PortCoreOutputUnit.cpp: when a message fails
	to be written because the carrier has dropped, then break the
	connection.  (Occasional messaging problems in unreliable
	protocols like udp/mcast should not lead to a dropped carrier.
	This is a fix for the "Port disconnect event problem" reported by
	Marco Barbosa on robotcub-hackers mailing list.

	* src/libYARP_OS/include/yarp/os/impl/Protocol.h: propagate
	failure of communication to deactivation of carrier.

2009-01-08 Lorenzo Natale <nat@liralab.it>
	* conf/FindGthread.cmake
	* conf/YarpReqLib.cmake
	* src/CMakeLists.txt
	* src/yarpview/CmakeLists
	added gthread libs, used by new version of yarpview, searched 
	only when requested
	
2008-12-30 Lorenzo Natale <nat@liralab.it>
	* src/yarpview:
	started reorganization and update of yarpview, at the moment
	the new version is compiled only if an appropriate flag is 
	selected in cmake.
	
2008-12-11 Lorenzo Natale <nat@liralab.it>
	* src/libYARP_OS/src/Terminator.cpp
	* src/libYARP_OS/include/yarp/os/Terminator.h
	fixed bug in ~Terminee() that caused occasional deadlock
	when the object was destoyed without it received a quit message

2008-12-10 Lorenzo Natale <nat@liralab.it>
	* conf/YarpDevice.cmake, conf/YarpModuleHooks.cmake:
	fixed Debug/Release problems when building external modules library, 
	changes commented in code.

2008-12-03  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* example/os/playback.cpp: show an example of relaying messages
	with unknown format.

2008-11-26  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/include/yarp/os/PortReaderBuffer.h: add 
	disableCallback method (thanks Andreu Corominas Murtra for
	the suggestion)

2008-11-20  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
