@@ -1,3 +1,14 @@
+2009-02-13  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
+
+	* src/libYARP_OS/src/NetType.cpp: improve text-mode continuation
+	across line breaks.
+
+	* src/libYARP_OS/src/Property.cpp: fix bugs in variable expansion,
+	continuation across line breaks.
+
+	* src/libYARP_OS/harness/PropertyTest.cpp: add better regression 
+	tests for variable expansion, continuation across line breaks.
+
 2009-01-21  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
 
 	* example/port_power/ex0402_port_callback_reply.cpp: add return
